[package]
name = "poplar_blossom"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_common_assets = {version = "0.10.0", features = ["csv"]}
bevy_rapier3d = "0.25.0"
bevy_renet = "0.0.11"
csv = "1.3.0"
meshtext = "0.3.0"
renet = "0.0.15"
serde = "1.0.201"
thiserror = "1.0.60"
webbrowser = { version = "1.0.1", features = ["hardened"] }
bevy-inspector-egui = "0.24.0"
# bevy_tweening = "0.10"
